--- a/FoodPin/Info.plist
+++ b/FoodPin/Info.plist
@@ -22,6 +22,11 @@
 	<true/>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoadsInWebContent</key>
+		<true/>
+	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>You need to grant the app access to your camera  in oder to take photos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
